--- a/test/test1.ipynb
+++ b/test/test1.ipynb
@@ -24,23 +24,14 @@
     "\n",
     "def loop():\n",
     "    x = np.linspace(-1, 1, 1000)\n",
-    "    y = np.sin(win._x * np.pi * 2) * 0.8 + \\\n",
-    "        np.random.rand(len(win._x)) * 0.1\n",
+    "    y = np.sin(x * np.pi * 2) * 0.8 + \\\n",
+    "        np.random.rand(len(x)) * 0.1\n",
     "\n",
     "    win.setXY(x, y)\n",
     "\n",
     "win.eventLoop = loop\n",
     "\n",
     "win"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = pyglplot.Hello()"
    ]
   }
  ],
