--- a/test/test1.ipynb
+++ b/test/test1.ipynb
@@ -20,14 +20,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "line1 = pyglplot.Line()\n",
+    "line2 = pyglplot.Line()\n",
+    "\n",
     "win = pyglplot.Pyglplot()\n",
+    "win.lines = [line1, line2]\n",
+    "\n",
+    "line1.setColor([1, 0, 0])\n",
+    "line2.setColor([0, 1, 0])\n",
+    "\n",
+    "win.setGlobalOffset(0, 0.5)\n",
+    "win.setGlobalScale(1, 0.6)\n",
     "\n",
     "def loop():\n",
     "    x = np.linspace(-1, 1, 1000)\n",
-    "    y = np.sin(x * np.pi * 2) * 0.8 + \\\n",
+    "    y1 = np.sin(x * np.pi * 2) * 0.8 + \\\n",
     "        np.random.rand(len(x)) * 0.1\n",
     "\n",
-    "    win.setXY(x, y)\n",
+    "    y2 = np.cos(x * np.pi * 2) * 0.8 + \\\n",
+    "        np.random.rand(len(x)) * 0.1\n",
+    "\n",
+    "    line1.setXY(x, y1)\n",
+    "    line2.setXY(x, y2)\n",
     "\n",
     "win.eventLoop = loop\n",
     "\n",
