--- a/test/test1.ipynb
+++ b/test/test1.ipynb
@@ -11,7 +11,7 @@
     "import repackage\n",
     "repackage.add_path('/home/danial/code/pyglplot/')\n",
     "\n",
-    "from pyglplot import pyglplot"
+    "from pyglplot import plot"
    ]
   },
   {
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line1 = pyglplot.Line()\n",
-    "line2 = pyglplot.Line()\n",
+    "line1 = plot.Line()\n",
+    "line2 = plot.Line()\n",
     "\n",
-    "win = pyglplot.Pyglplot()\n",
+    "win = plot.Canvas()\n",
     "win.lines = [line1, line2]\n",
     "\n",
     "line1.setColor([1, 0, 0])\n",
