--- a/examples/example-min.ipynb
+++ b/examples/example-min.ipynb
@@ -7,10 +7,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "import repackage\n",
-    "repackage.add_path('/home/danial/code/pyglplot/')\n",
-    "\n",
     "from pyglplot import plot"
    ]
   },
@@ -20,30 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line1 = plot.Line()\n",
-    "line2 = plot.Line()\n",
+    "line = plot.Line()\n",
     "\n",
-    "win = plot.Canvas()\n",
-    "win.lines = [line1, line2]\n",
+    "win = plot.Canvas([line])\n",
     "\n",
-    "line1.setColor([1, 0, 0])\n",
-    "line2.setColor([0, 1, 0])\n",
+    "line.setColor([1, 1, 0])\n",
     "\n",
-    "win.setGlobalOffset(0, 0.5)\n",
-    "win.setGlobalScale(1, 0.6)\n",
+    "x = np.linspace(-1, 1, 1000)\n",
     "\n",
     "def loop():\n",
-    "    x = np.linspace(-1, 1, 1000)\n",
-    "    y1 = np.sin(x * np.pi * 2) * 0.8 + \\\n",
+    "    y = np.sin(x * np.pi * 2) * 0.8 + \\\n",
     "        np.random.rand(len(x)) * 0.1\n",
+    "    line.setXY(x, y)\n",
     "\n",
-    "    y2 = np.cos(x * np.pi * 2) * 0.8 + \\\n",
-    "        np.random.rand(len(x)) * 0.1\n",
-    "\n",
-    "    line1.setXY(x, y1)\n",
-    "    line2.setXY(x, y2)\n",
-    "\n",
-    "win.eventLoop = loop\n",
+    "win.setEventLoop(loop)\n",
     "\n",
     "win"
    ]
@@ -65,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
