--- a/test/test1.ipynb
+++ b/test/test1.ipynb
@@ -23,8 +23,8 @@
     "line1 = plot.Line()\n",
     "line2 = plot.Line()\n",
     "\n",
-    "win = plot.Canvas()\n",
-    "win.lines = [line1, line2]\n",
+    "win = plot.Canvas([line1, line2])\n",
+    "\n",
     "\n",
     "line1.setColor([1, 0, 0])\n",
     "line2.setColor([0, 1, 0])\n",
@@ -32,8 +32,9 @@
     "win.setGlobalOffset(0, 0.5)\n",
     "win.setGlobalScale(1, 0.6)\n",
     "\n",
+    "x = np.linspace(-1, 1, 1000)\n",
+    "\n",
     "def loop():\n",
-    "    x = np.linspace(-1, 1, 1000)\n",
     "    y1 = np.sin(x * np.pi * 2) * 0.8 + \\\n",
     "        np.random.rand(len(x)) * 0.1\n",
     "\n",
@@ -43,7 +44,7 @@
     "    line1.setXY(x, y1)\n",
     "    line2.setXY(x, y2)\n",
     "\n",
-    "win.eventLoop = loop\n",
+    "win.setEventLoop(loop)\n",
     "\n",
     "win"
    ]
